test/integration/cli-args/sstanc.t/fail/bad-indexed-observe.stan
data {
  int<lower=1> N;
  array[N] real y;
}
model {
  y[1] ~ normal(0, 1);
}
